# VideoSurvey

./: .gitignore  app.js  config.json  index.html  pyproject.toml  stats.html  stats.js  styles.css
.github/workflows/: pages.yml
analysis/: analyze.py
backend/: google_sheets_webapp.gs  main.py  worker.js  wrangler.toml
scripts/: build_survey_videos.py  video_grid_config.example.json
videos/: conversion_report.json
